syntax = "proto3";
package gov.hhs.aspr.ms.gcm.taskit.protobuf.plugins;

option java_multiple_files = true;
option java_package = "gov.hhs.aspr.ms.gcm.taskit.protobuf.plugins.groups.support.input";

import "plugins/partitions/support.proto";
import "plugins/properties/support.proto";
import "google/protobuf/any.proto";


message GroupIdInput {
    int32 id = 1;
}

message SimpleGroupTypeIdInput {
    string value = 1;
}

message GroupTypeIdInput {
    google.protobuf.Any id = 1;
}

message GroupPropertyIdInput {
    google.protobuf.Any id = 1;
}

message PersonToGroupMembershipInput {
    int32 personId = 1;
    repeated int32 groupIds = 2;
}

message GroupToPersonMembershipInput {
    int32 groupId = 1;
    repeated int32 personIds = 2;
}

message GroupPropertyDefinitionMapInput {
    GroupTypeIdInput groupTypeId = 1;
    repeated PropertyDefinitionMapInput propertyDefinitions = 2;
}

message GroupPropertyValueMapInput {
   GroupIdInput groupId = 1;
   repeated PropertyValueMapInput propertyValueMap = 2;
}

message GroupInput {
    GroupIdInput groupId = 1;
    GroupTypeIdInput groupTypeId = 2;
}

message GroupPropertyDimensionInput {
    GroupIdInput groupId = 1;
    GroupPropertyIdInput groupPropertyId = 2;
    repeated google.protobuf.Any values = 3;
}

message GroupMemberFilterInput {
    GroupIdInput groupId = 1;
}

message GroupTypesForPersonFilterInput {
    EqualityInput equality = 1;
    int32 groupTypeCount = 2;
}

message GroupsForPersonAndGroupTypeFilterInput {
    GroupTypeIdInput groupTypeId = 1;
    EqualityInput equality = 2;
    int32 groupCount = 3;
}

message GroupsForPersonFilterInput {
    EqualityInput equality = 1;
    int32 groupCount = 2;
}
